# flask-ts-template

./: .gitignore  README.md  eslintrc.json  gulpfile.js  package-lock.json  package.json  pyproject.toml  pytype.cfg  requirements-dev.txt  requirements.txt  tsconfig.json  webpack.config.ts
scripts/: check_imports.sh  check_style.sh  check_types.sh  poetry_install.sh  poetry_run.sh  poetry_update.sh  run_tests.sh
src/: main.py  routes.py
src/routes/: general.py
src/templates/: index.html
src/ts/: index.ts
