[tool.poetry]
name = "flask-ts-template"
version = "0.1.0"
description = ""
authors = ["gustavo <gustavo.passarella@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
